--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#"><strong>El Original</strong> Online</a>
+        <a class="navbar-brand" href="index.html"><strong>El Original</strong> Online</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -37,6 +37,7 @@
 
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#">Track Order</a></li>
+          <li><a href="#">Carrito</a></li>
           <li><a href="#">Ingresa</a></li>
           <li><a href="#">Registrate</a></li>
 
